--- a/cameras/sony_as100/as100_lens.ini
+++ b/cameras/sony_as100/as100_lens.ini
@@ -2,18 +2,18 @@
 image_width=1920
 image_height=1080
 type=20
-hfov=133.212
+hfov=137.604
 hfov_link=0
 crop=1
-a=-0.005
+a=0.001
 a_link=0
 b=0
 b_link=0
-c=0.005
+c=0.004
 c_link=0
-d=-7
+d=-8
 d_link=0
-e=10
+e=-34
 e_link=0
 g=0
 g_link=0
@@ -43,8 +43,16 @@ Re=0
 Re_link=0
 [Lens/crop]
 enabled=0
-autoCenter=0
+autoCenter=1
 left=0
 top=0
 right=1920
 bottom=1080
+[EXIF]
+CameraMake=SONY
+CameraModel=HDR-AS100V
+FocalLength=2.8
+Aperture=2.8
+ISO=0
+CropFactor=1
+Distance=0
