--- a/vidstab_hugin_tmpl.ini
+++ b/vidstab_hugin_tmpl.ini
@@ -1,60 +1,60 @@
-;; This file should be copied and edited to pass to a "-p"("--project") command line option.
-
-;; section header, required
+;; section header, project parameters
 [parameters]
 
-;; Field Of View angles(degrees) from optical center of crop area in Hugin preview window
-;; Can be found by moving mouse pointer to crop margins
-;;
-left_fov = 66.5
-right_fov = 68.1
-up_fov = 36.4
-down_fov = 32.8
+;;; List of Hugin lens projections
+;; 0   Rectilinear
+;; 1   Cylindrical
+;; 2   Equirectangular
+;; 3   Fisheye
+;; 4   Stereographic
+;; 5   Mercator
+;; 6   Trans Mercator
+;; 7   Sinusoidal
+;; 8   Lambert Cylindrical Equal Area
+;; 9   Lambert Equal Area Azimuthal
+;; 10  Albers Equal Area Conic
+;; 11  Miller Cylindrical
+;; 12  Panini
+;; 13  Architectural
+;; 14  Orthographic
+;; 15  Equisolid
+;; 16  Equirectangular Panini
+;; 17  Biplane
+;; 18  Triplane
+;; 19  Panini General
+;; 20  Thoby
+;; 21  Hammer-Aitoff Equal Area
+;;;
 
-;; A FOV angle for FFMPEG crop filter to pass to libvidstab detect
-;;
-stab_crop_fov = 64
+;;; Input parameters used when -i/--original_input option is 0(default)
+;; input projection of a video that is passed to libvidstab detect
+input_projection = 8
+;; input video FFMPEG filter, 16/9 = 1.777
+;input_video_filter = crop=floor(iw/2)*2:floor(ih/2)*2
+input_video_filter = crop=floor((ih*1.777)/2)*2:floor(ih/2)*2,pp=al
+;; a scale for input video, a multiplication number for width and height
+input_video_scale = 1
+;;;
 
-;; libvidstab stepsize, number of pixels
-;; 6 is default in libvidstab, lower stepsize is slower
-;; https://github.com/georgmartius/vid.stab
-;;
-motion_detection_stepsize = 1
-
-;; libvidstab mincontrast
-;;
+;;; libvidstab mincontrast
 motion_detection_mincontrast = 0.3
+;;; performance parameter, doesn't affect quality of detection
+stepsize = 8
+;; smoothing in percents, 100% = FPS of input video
+smoothing = 128
+;;;
 
-;; smoothing in percents, not frames,
-;; because input vids can have different number of Frames Per Second
+;;; Number of processes(used CPU cores) for parallel work.
+num_cpus = 3
+;;;
+
+;;; output video FFMPEG filter
 ;;
-smoothing = 80
-
-;; Output video projection type, as in Hugin dropdown menu, indexes:
-;; 0 : Rectilinear
-;; 1 : Cylindrical
-;; 2 : Equirectangular
-;; 3 : Fisheye
-;; 4 : Stereographic
-;; 5 : Mercator
-;; 6 : Trans Mercator
-;; 7 : Sinusoidal
-;; 8 : Lambert Cylindrical Equal Area
-;; 9 : Lamber Equal Area Azimuthal
-;; 10: Albers Equal Area Conic
-;; 11: Miller Cylindrical
-;; 12: Panini
-;; 13: Architectural
-;; 14: Orthographic
-;; 15: Equisolid
-;; 16: Equirectangular Panini
-;; 17: Biplane
-;; 18: Triplane
-;; 19: Panini General
-;; 20: Thoby Projection
-;; 21: Hammer-Aitoff Equal Area
+;; crop:                    crop=iw*0.94:ih*0.95:(iw-(iw*0.94))/2:(ih-(ih*0.95))/2
+;; scale:                   scale=1920:-1
+;; generic postprocessing:  pp=al/tmpnoise|1|2|3
+;; sharpen:                 smartblur=lr=1.5:ls=-0.3
+;; format:                  format=yuv420p  format=yuv444p
 ;;
-output_projection = 0
-
-;; Number of processes(used CPU cores) for parallel work.
-num_processes = 3
+;; filters are separated by commas
+sout_filter = crop=iw*0.94:ih*0.95:(iw-(iw*0.94))/2:(ih-(ih*0.95))/2,scale=1920:-1,crop=floor(iw/2)*2:floor(ih/2)*2,pp=al/tmpnoise|1|2|3,format=yuv420p
